# pyzot

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PKG-INFO  PLAN_WRITE.md  README.md  SKILL.md  TODO.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  test_script.py  zotcli.code-workspace
.github/workflows/: ci.yml  docs.yml  release.yml
api-reference/: index.html
architecture-write/: index.html
archive/ci-workflows/: README.md  publish.yml
cli-reference/: index.html
commands/: index.html
data-models/: index.html
docs/: api-reference.md  api_reference.md  architecture-write.md  cli-reference.md  cli_reference.md  commands.md  data-models.md  data_models.md  fulltext-bugs-and-find-available-pdfs.md  getting-started.md  getting_started.md  index.md
getting-started/: index.html
search/: search_index.json
src/pyzot/: __init__.py  __main__.py  config.py  db.py  logging_setup.py  models.py  paths.py
src/zotcli/: __init__.py  __main__.py  config.py  db.py  logging_setup.py  paths.py
tests/: conftest.py  test_cli.py  test_db.py  test_export.py  test_queries.py
tests/fixtures/: sample.bib  sample.epub  sample.ris
tests/integration/: conftest.py  test_add_cite.py  test_add_file.py  test_add_import.py  test_add_pipeline.py  test_add_url.py  test_auto_detect.py  test_batch.py  test_connector_client.py  test_verbose.py  test_with_pdf.py
tests/unit/: test_attach_existing.py  test_browser_optional_dep.py  test_citation_pipeline.py  test_config_write_section.py  test_credentials.py  test_csl_json.py  test_dedup.py  (+7 more)
(+107 files in other folders)
