[project]
name = "pyzot"
version = "0.3.0"
description = "A CLI for browsing, exporting, and adding items to a Zotero library"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Cameron Brooks", email = "cambrooks3393@gmail.com"}
]
dependencies = [
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "python-dateutil>=2.9",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
bibtex = ["pybtex>=0.24"]
export = ["jinja2>=3.1"]
write = ["httpx>=0.27"]
dev = ["pytest", "pytest-httpserver", "tomli-w", "vcrpy"]
docs = ["mkdocs-material", "mkdocstrings[python]", "mkdocs-click"]
all = ["pyzot[bibtex,export,write]"]

[project.scripts]
zot = "pyzot.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyzot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=tests/e2e"
markers = [
    "e2e: end-to-end tests requiring real zotero.sqlite",
]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "B008", "SIM102", "SIM105"]

[tool.ruff.lint.isort]
known-first-party = ["pyzot"]
